# Ponder

./: README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1dd7df236b00_initial_migration.py
backend/app/: main.py
backend/src/: main.py
backend/src/crud/: block.py
backend/src/models/: block.py
backend/src/routers/: __init__.py  block.py
backend/src/schemas/: block.py
frontend/: package-lock.json  package.json
frontend/src/components/: Divider.tsx  Heading.tsx  List.tsx  SideBar.tsx  Text.tsx
